# phase-2

./: .env.example  .gitignore  HISTORY.md  README.md  main.py  package-lock.json  package.json  phase-i-plan.md  phase-i-specification.md  phase-i-tasks.md  pyproject.toml  sp.constitution  todo.db  vercel.json
api/: index.py
backend/: package-lock.json  package.json  setup_db.py  todo.db
backend/app/: agent.py  main.py  mcp_server.py
backend/app/api/: auth.py  chat.py  todos.py
backend/app/core/: config.py  database.py  security.py
backend/app/dependencies/: auth.py
backend/app/models/: models.py
backend/app/schemas/: auth.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/.next/: app-build-manifest.json
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  (+1 more)
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/todos/: page.tsx
frontend/components/: Navbar.tsx
frontend/components/chat/: ChatContainer.tsx
frontend/context/: AuthContext.tsx
history/prompts/: phase-ii-specs.md
nextjs/: package-lock.json
nextjs/src/app/: page.js
specs/002-todo-web-api/: plan.md  specification.md  tasks.md
todo_app/: __init__.py  main.py
todo_app/cli/: __init__.py  input_handler.py  menu.py
todo_app/models/: __init__.py  task.py
todo_app/services/: __init__.py  todo_service.py
todo_app/tests/: test_input_handler.py  test_todo_menu.py  test_todo_service.py
(+53 files in other folders)
